<resources>
    <string name="app_name">FNR</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logo">logo</string>
    <string name="sign_in_text">EINLOGGEN</string>
    <string name="sign_up_text">ANMELDEN</string>
    <string name="email">Nutzername</string>
   <!-- <string name="enter_your_mail">enter user name</string>-->
    <string name="enter_your_mail">Benutzername eingeben</string>
    <string name="password">PASSWORT</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="scan_skip"><u>ÜBERSPRINGEN</u></string>
    <string name="plan">Plannen</string>


    <!--ToolBar Text-->
    <string name="title_activity_project">PROJEKTLISTE</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_scan">Scan</string>
    <string name="title_notifications">NACHRICHTEN</string>
    <string name="title_profile">Profile</string>


    <!--Building Title and Names-->
    <string name="title_activity_building">HAUSER</string>

    <!--Building Title and Names-->
    <string name="title_activity_building_component">HAUS</string>
    <string name="building_flat">Wohnungen</string>
    <string name="building_component">Katagorie</string>


    <!--Flat and flat related title, name string-->
    <string name="title_activity_flat_component">WOHNUNGEN</string>


    <!--Sub Component Related String-->
    <string name="title_activity_sub_component">Unterkomponenten</string>

    <!--Component Details-->
    <string name="title_activity_component_detail">Komponentendetail</string>

    <!--Component Details-->
    <string name="title_activity_profile">Mein Profil</string>


    <!--Notification Title and others-->
    <string name="title_activity_notification">NACHRICHTEN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_scan_capture">FNR Scan</string>


    <string name="lbl_justnow">Just Now</string>
    <string name="lbl_seconds_ago">seconds ago</string>
    <string name="lbl_min_ago">min ago</string>
    <string name="lbl_mins_ago">mins ago</string>
    <string name="lbl_hr_ago">hr ago</string>
    <string name="lbl_hrs_ago">hrs ago</string>
    <string name="lbl_day_ago">day ago</string>
    <string name="lbl_days_ago">days ago</string>
    <string name="lbl_lstweek_ago">last week</string>
    <string name="lbl_week_ago">weeks ago</string>
    <string name="lbl_onemonth_ago">1 month ago</string>
    <string name="lbl_month_ago">months ago</string>
    <string name="lbl_oneyear_ago">last year</string>
    <string name="lbl_year_ago">years ago</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="scan_text">Bitte stellen Sie Ihr Telefon vor das Haus, um alle Ihre Arbeiten zu scannen und zu sehen</string>
    <string name="information">INFORMATION</string>
    <string name="project_name">PROJEKTNAME</string>
    <string name="building_name">GEBÄUDENAME</string>
    <string name="flat_name">FLACHER NAME</string>
    <string name="full_name">Vollständiger Name</string>
    <string name="user_name">Nutzername</string>
    <string name="log_out">Ausloggen</string>


</resources>
